Implementado integracao com terceira API rest

--- a/Farmas/app/src/main/AndroidManifest.xml
+++ b/Farmas/app/src/main/AndroidManifest.xml
@@ -2,10 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.farmaonline.farmas">
 
+
     <permission
         android:name="com.example.permission.MAPS_RECEIVE"
         android:protectionLevel="signature" />
-
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="com.example.permission.MAPS_RECEIVE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
@@ -13,7 +14,7 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.CALL_PHONE" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <uses-feature
         android:name="android.hardware.camera"
@@ -52,6 +53,11 @@
         <activity android:name=".viewutils.MapsFragment" />
         <activity android:name=".view.ResultPedidoActivity" />
         <activity android:name=".view.DadosEmpresaActivity"></activity>
+        <receiver android:name=".receivers.SaveNumberCallsReceiver">
+            <intent-filter>
+                <action android:name="android.intent.action.PHONE_STATE" ></action>
+            </intent-filter>
+        </receiver>
     </application>
 
 </manifest>
